/*
 *   Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 *
 *   Licensed under the Apache License, Version 2.0 (the "License").
 *   You may not use this file except in compliance with the License.
 *   A copy of the License is located at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 *   or in the "license" file accompanying this file. This file is distributed
 *   on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
 *   express or implied. See the License for the specific language governing
 *   permissions and limitations under the License.
 */

import { getURLQueryParams } from '../helpers';

describe('Helpers', () => {
  describe('getURLQueryParams', () => {
    test('should return valid default query params', () => {
      expect(getURLQueryParams({ search: '' })).toMatchSnapshot();
    });
    test('should return query string value if provided else default value', () => {
      expect(getURLQueryParams({ search: '?from=20&size=15' })).toMatchSnapshot();
    });
  });
});
